# Orion

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  glad.c
Assets/Shaders/: Basic2D.shader  Basic3D.shader
Engine/: Utils.cpp  Utils.h
Engine/Graphics/: IndexBuffer.cpp  IndexBuffer.h  Quad2D.cpp  Quad2D.h  Quad3D.cpp  Quad3D.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
